# photolitography_table

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  build.sh  init.sh  run_docker.sh
3d_models/: 2parts_spool_motor.iam  bolt.blend  hand.blend  holder.blend  holder_with_base.blend  plate.blend  spool_long.ipt  spool_motor.ipt  spool_short.ipt  stepper_holder.blend  table_assembly.iam  table_bridge.ipt  table_column.ipt  table_top.ipt
meta-pholit/: README
meta-pholit/conf/: bblayers.conf  layer.conf  local.conf
meta-pholit/recipes-kernel/linux/: linux-ti-staging_%.bbappend
meta-pholit/recipes-kernel/linux/files/: 0001-Add-i2c-and-gpio-pins-support-in-dts-file.patch  0001-Adjust-device-tree-files-for-pgraphy-purposes.patch  0001-arm64-dts-k3-j721e-common-proc-board-Add-INA2xx-supp.patch  0001-arm64-dts-ti-k3-j721e-sk-Enable-wkup-i2c0.patch  0002-Change-default-kernel-config-file.patch  usb-serial.cfg
meta-pholit/recipes-pholit/core-image-pgraphy/: core-image-pgraphy.bb
meta-pholit/recipes-pholit/lcdc_drv/: lcdc_drv_1.0.bb  lcdc_drv_1.0.bb.backuo
meta-pholit/recipes-pholit/lcdc_drv/files/: Makefile  lcdc_drv.c  lcdc_drv.h
meta-pholit/recipes-pholit/pgraphy/: pgraphy.bb
meta-pholit/recipes-pholit/pgraphy/files/: CMakeLists.txt  (+5 more)
meta-pholit/recipes-pholit/pholit/: pholit_1.0.bb
meta-pholit/recipes-pholit/vtcon_dis/: vtcon_dis.bb
src/: main.c
sw/: CMakeLists.txt  Makefile  flash.sh
sw/src/: main.c  stepper.c
table_ctrl/: .config  CMakeLists.txt  Makefile  README.md  build.sh  flash.sh
table_ctrl/src/: dist.c  dist.h  main.c  stepper.c
(+8 files in other folders)
